tests/baselines/reference/callConstructorsES6_11.errors.txt
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_11.ts(3,5): error TS9003: Callable classes are not currently supported.
tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_11.ts(9,10): error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?


==== tests/cases/conformance/es7/callConstructors/es6/callConstructorsES6_11.ts (2 errors) ====
    
    class C {
        call constructor(): this {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
            return this;
    ~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS9003: Callable classes are not currently supported.
    }
    
    let c1 = new C();
    let c2 = C();
             ~~~
!!! error TS2348: Value of type 'typeof C' is not callable. Did you mean to include 'new'?